Listar sólo fuentes instaladas durante creación artefacto

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,7 +42,7 @@ jobs:
           fc-cache -fv
 
       - name: List available fonts
-        run: fc-list | grep -i "alegreya\|spectral\|junicode\|bagnard"
+        run: fc-list | grep -i "junicode\|unzialish"
 
       - name: Compile Typst to PDF
         run: typst compile prueba.typ
